fix responsive on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -81,7 +81,7 @@ h3 {
 
             &_previewer {
                 height: 40vh;
-                overflow-y: auto;
+                overflow: auto;
             }
         }
     }
